Mon Feb 26 10:42:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* strace.cc (strace::vprntf): Move prntf functionality to this function
	adding an va_list interface to strace.
	(strace::printf): Calls strace::vprntf now.
	(strace_printf): New function providing an extern "C" interface to
	trace output.
	* include/sys/strace.h: Make plain C clean.
	(class strace): Add `vprntf' method.

Mon Feb 26  0:10:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* shortcut.c: Remove #include <sys/strace.h>.

Sun Feb 25 10:32:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* path.cc (symlink): Add a ".lnk" suffix regardless. Add a comment.

Sun Feb 25 10:18:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* shortcut.c (check_shortcut): Change symlink condition.

Fri Feb 23 10:42:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* mmap.cc (fhandler_disk_file::mmap): Use `addr' correctly.
	* fhandler_mem.cc (fhandler_dev_mem::mmap): Ditto.

Thu Feb 22 17:09:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* path.cc (symlink): Keep relative paths relative in the DOS
	path inside of a shortcut. If that's impossible or the target
	path is already absolute save an absolute path.

Thu Feb 22 15:33:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* cygerrno.h: Revert previous patch.
	* errno.cc: Ditto.
	* dir.cc: Eliminate `dir_suffixes'.
	(opendir): Remove usage of `dir_suffixes'.
	(rmdir): Ditto.
	* fhandler.cc (fhandler_disk_file::open): Remove usage of
	`inner_suffixes'.
	* path.cc: Rename `inner_suffixes' to `lnk_suffixes'.
	(path_conv::check): Remove usage of `inner_suffixes'.
	(symlink): Ditto.
	(symlink_info::check): Handle checking for `.lnk' in path_conv
	exclusively here.
	(chdir): Remove usage of `dir_suffixes'.
	* shortcut.c: Eliminate debug_printf lines.
	(check_shortcut): Don't set error except on failing ReadFile.
	* spawn.cc: Remove ".lnk" from `std_suffixes'.
	* syscalls.cc (_unlink): Remove usage of `inner_suffixes'.
	Remove ".lnk" from `stat_suffixes'.